Authorize via swagger

--- a/MagicVilla_Web/Views/VillaNumber/CreateVillaNumber.cshtml
+++ b/MagicVilla_Web/Views/VillaNumber/CreateVillaNumber.cshtml
@@ -3,7 +3,7 @@
 <form asp-action="CreateVillaNumber">
     <br />
     <div class="container border p-3">
-        <h1 class="text-primary">Create Villa</h1>
+        <h1 class="text-primary">Create Villa Number</h1>
         <hr />
         <div class="row">
             <div asp-validation-summary="All" class="text-danger"></div>
